# ular-s7s

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
docs/: architecture.md  development-history.md  models.md  panel-focus-style.md  preview-omission-style.md  profiles.md  refactoring-plan.md  releasing.md  session-context-implementation-plan.md  session-context.md  session-title-compat.md  testing.md  ui-style-guide.md  usage-display.md
scripts/: check.sh  release.sh
src/: cache.rs  config.rs  demo.rs  filter.rs  handoff.rs  lib.rs  main.rs  model.rs  models.rs  normalize.rs  profile.rs  rename.rs  resume.rs  runtime.rs  scan.rs  session_cli.rs  theme.rs  title.rs  usage.rs
src/parser/: antigravity.rs  claude.rs  codex.rs  mod.rs  turn.rs
src/parser/claude/: events.rs  mod.rs
src/parser/codex/: events.rs  mod.rs
src/probe/: mod.rs  process.rs  pty.rs
src/session_context/: antigravity.rs  claude.rs  codex.rs  excerpt.rs  mod.rs  model.rs  redact.rs  render.rs  resolve.rs
src/ui/: background.rs  copy.rs  effect.rs  mod.rs  quick.rs  render.rs  test_support.rs  tests.rs
src/ui/components/: input.rs  mod.rs  modal.rs  scrollbar.rs  text.rs
src/ui/detail/: input.rs  mod.rs  render.rs  state.rs  tests.rs
src/ui/new_session/: input.rs  mod.rs  render.rs  state.rs  tests.rs
src/ui/overlays/: confirm.rs  filters.rs  help.rs  message.rs  mod.rs  tests.rs  theme.rs
src/ui/profile/: input.rs  mod.rs  render.rs  state.rs  tests.rs
src/ui/quick/: input.rs  mod.rs  registry.rs  render.rs  state.rs  tests.rs
(+5 files in other folders)
