[package]
name = "s7s"
version = "0.1.1"
edition = "2021"
description = "Unified k9s-style TUI to search and resume Claude Code, Antigravity CLI, and Codex sessions"
license = "MIT"
repository = "https://github.com/ular-io/ular-s7s"
homepage = "https://github.com/ular-io/ular-s7s"

[[bin]]
name = "s7s"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
unicode-normalization = "0.1"
unicode-width = "0.2"
dirs = "5"
anyhow = "1"
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
vt100 = "0.15"
libc = "0.2"
chrono = "0.4"
toml = "1.1.3"
clap = { version = "4.6.2", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
